made a webpage using React, JS & CSS that displays 10 popular restaurants (with links to their menus) in card like format on George Street, New Brunswick, NJ
made a webpage that displays 10 popular restaurants (with links to their menus) in card like format on George Street, New Brunswick, NJ.
Initialized a new React application with Vite.
Created a functional React component.
Defined and pass props to the components.
Applied CSS styling to React components
Implemented media queries to make the webpage responsive to different screen sizes.
Implemented eventListeners to add buttons (with embedded links) to a related resource (restaurant menus) on each card.
Began writing a detailed README file.

--- a/LAB/timetabled/src/index.css
+++ b/LAB/timetabled/src/index.css
@@ -6,6 +6,11 @@ body {
   min-height: 100vh;
 }
 
+.Event {
+  width: 100px;
+  background: aquamarine;
+}
+
 th {
   width: 120px;
   padding-top: 25px;
