--- a/Projects/1_CommunityBoard/src/components/Card.css
+++ b/Projects/1_CommunityBoard/src/components/Card.css
@@ -1,5 +1,5 @@
 .Card {
-    width: 400px;
+    width: 350px;
     height: 300px;
     /* padding: 20px; */
     margin: 20px;
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .Card img {
