--- a/Projects/1_CommunityBoard/src/components/CardList.css
+++ b/Projects/1_CommunityBoard/src/components/CardList.css
@@ -9,13 +9,33 @@
     justify-content: center;
     image-rendering: auto;
     padding: 0; /*Remove padding*/
-    margin: 0; /*Remove margin*/
+    margin: 0; /*Remove margin*/  
+    position: relative;
+}
+
+.CardList::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../assets/images/wine.jpg'); /* Set the background image */
+    background-size: cover; /* Ensure the image covers the entire area */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-position: center;
+    background-attachment: fixed;
+    opacity: 0.5; /*make image more translucent*/
+    z-index: -1; /* Ensure the pseudo-element is behind the content */
 }
 
 .TopImageContainer {
     position: relative;
     width: 100vw;
     height: auto;
+    margin-bottom: 100px;
+    background-color: white;
+    margin-top: 0; /* Ensure no margin at the top */
 }
 
 .TopImageText {
@@ -35,14 +55,20 @@
 
 .TopImage {
     width: 100%;
+    max-height: 500px;
     height: auto;
-    object-fit: contain;
-    margin-bottom: 20px;
+    object-fit: cover;
+    margin-bottom: 0;
+    /* margin-top: 0; */
 }
 
 @media (max-width: 768px) {
     .TopImageText {
         font-size: 2rem;
         padding: 5px 10px;
+    }
+
+    .TopImage {
+        max-height: 200px; /* Adjust the maximum height for smaller screens */
     }
 }
