--- a/Projects/1_CommunityBoard/src/components/CardList.css
+++ b/Projects/1_CommunityBoard/src/components/CardList.css
@@ -18,24 +18,25 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-image: url('../assets/images/wine.jpg'); /* Set the background image */
     background-size: cover; /* Ensure the image covers the entire area */
     background-repeat: no-repeat; /* Prevent the image from repeating */
     background-position: center;
     background-attachment: fixed;
-    opacity: 0.5; /*make image more translucent*/
+    opacity: 0.7; /*make image more translucent*/
     z-index: -1; /* Ensure the pseudo-element is behind the content */
 }
 
 .TopImageContainer {
+    /* background-size: cover; */
     position: relative;
     width: 100vw;
     height: auto;
     margin-bottom: 100px;
     background-color: white;
-    margin-top: 0; /* Ensure no margin at the top */
+    margin-top: 0px; /* Ensure no margin at the top */
 }
 
 .TopImageText {
@@ -53,13 +54,23 @@
 
 }
 
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+
 .TopImage {
     width: 100%;
     max-height: 500px;
     height: auto;
     object-fit: cover;
     margin-bottom: 0;
-    /* margin-top: 0; */
+    display: block;
 }
 
 @media (max-width: 768px) {
